--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,11 @@
-﻿absl-py==2.2.2
-altair==5.5.0
-asttokens==3.0.0
-astunparse==1.6.3
-attrs==25.3.0
-blinker==1.9.0
-cachetools==6.1.0
-certifi==2024.12.14
-charset-normalizer==3.4.0
-click==8.1.7
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-dash==2.18.2
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.8.11
-decorator==5.1.1
-editdistance==0.8.1
-efficientnet==1.0.0
-essential-generators==1.0
-executing==2.1.0
-faiss-cpu==1.7.4.post2
-Faker==32.1.0
-filelock==3.18.0
-Flask==3.0.3
-flatbuffers==25.2.10
-fonttools==4.53.1
-fsspec==2025.5.1
-gast==0.6.0
-gitdb==4.0.12
-GitPython==3.1.45
-google-pasta==0.2.0
-grpcio==1.71.0
-h5py==3.11.0
-huggingface-hub==0.32.0
-idna==3.10
-imageio==2.34.2
-imgaug==0.4.0
-importlib_metadata==8.5.0
-ipykernel==6.29.5
-ipython==8.31.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.4
-joblib==1.5.1
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kafka-python==2.0.2
-keras==3.10.0
-Keras-Applications==1.0.8
-keras-ocr==0.9.3
-kiwisolver==1.4.5
+streamlit==1.35.0
+pymarc== 5.0.0
+lxml==4.9.3
+requests==2.31.0
+PyMuPDF==1.23.19
 langdetect==1.0.9
-lazy_loader==0.4
-libclang==18.1.1
-lxml==5.4.0
-Markdown==3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.0
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-ml_dtypes==0.5.1
-mpmath==1.3.0
-namex==0.0.9
-narwhals==1.48.1
-nest-asyncio==1.6.0
-networkx==3.3
-numpy==2.0.1
-opencv-python==4.10.0.84
-opt_einsum==3.4.0
-optree==0.15.0
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pillow==10.4.0
-platformdirs==4.3.6
-plotly==5.24.1
-prompt_toolkit==3.0.48
-protobuf==5.29.4
-psutil==6.1.1
-pure_eval==0.2.3
-pyarrow==21.0.0
-pyclipper==1.3.0.post5
-pycrc==0.10.0
-pydeck==0.9.1
-Pygments==2.18.0
-pymarc==5.3.1
-PyMU==0.2.23
-PyMuPDF==1.26.3
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-retrying==1.3.4
-rich==14.0.0
-rpds-py==0.26.0
-safetensors==0.5.3
-scikit-image==0.24.0
-scikit-learn==1.6.1
-scipy==1.14.0
-seaborn==0.13.2
-sentence-transformers==4.1.0
-shapely==2.0.5
-six==1.16.0
-smmap==5.0.2
-stack-data==0.6.3
-streamlit==1.47.1
-sympy==1.14.0
-tenacity==9.0.0
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.1.0
-threadpoolctl==3.6.0
-tifffile==2024.7.24
-tokenizers==0.21.1
-toml==0.10.2
-torch==2.7.0
-tornado==6.4.2
-tqdm==4.66.5
-traitlets==5.14.3
-transformers==4.52.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-validators==0.33.0
-watchdog==6.0.0
-wcwidth==0.2.13
-Werkzeug==3.0.6
-wrapt==1.17.2
-zipp==3.21.0
-
+sentence-transformers==2.2.2
+faiss-cpu==1.7.4
+# Optional: Only add ipython if you really need it
+ipython==8.18.1
+huggingface_hub==0.20.3
