--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,4 @@ sentence-transformers==2.2.2
 transformers==4.28.1
 torch==1.13.1
 huggingface_hub==0.14.1
-faiss==1.7.2
-markdown-it-py==3.0.0
-rich==14.1.0
-pygments==2.19.2
-
+faiss-cpu==1.7.2  # works on Python 3.9
