--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pymarc
-PyMuPDF
-lxml
-sentence-transformers==2.2.2
-transformers==4.28.1
-torch==2.2.2
-faiss-cpu
+streamlit>=1.32.0
+pymarc>=5.3.1
+PyMuPDF>=1.24.10
+lxml>=5.2.2
+sentence-transformers>=3.0.1
+transformers>=4.43.4
+torch>=2.5.0
+faiss-cpu>=1.8.0
