Revert "Added image upload option in PDF→MARC tab + updated requirements"
This reverts commit 8c91ccf5e7f14adfa7fe6272601a8c2f10a5d592.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-streamlit==1.35.0pymarc==4.1.0lxml==4.9.3requests==2.31.0PyMuPDF==1.23.19langdetect==1.0.9sentence-transformers==2.2.2faiss-cpu==1.7.4.post2pytesseract==0.3.10Pillow==10.3.0
+streamlit>=1.32.0
+pymarc>=5.3.1
+PyMuPDF>=1.24.10
+lxml>=5.2.2
+sentence-transformers>=3.0.1
+transformers>=4.43.4
+torch>=2.5.0
+faiss-cpu>=1.8.0
+langdetect>=1.0.9
