--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ PyMuPDF>=1.24.10
 lxml>=5.2.2
 sentence-transformers>=3.0.1
 transformers>=4.43.4
-torch>=2.5.0
 faiss-cpu>=1.8.0
 langdetect>=1.0.9
-Pillow==10.3.0
 easyocr==1.7.1
+torch==2.2.2
 torchvision==0.17.2
+Pillow==10.3.0
