--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit>=1.32.0
-pymarc>=5.3.1
-PyMuPDF>=1.24.10
-lxml>=5.2.2
-sentence-transformers>=3.0.1
-transformers>=4.43.4
-faiss-cpu>=1.8.0
-langdetect>=1.0.9
-easyocr==1.7.1
-torch==2.2.2
-torchvision==0.17.2
+streamlit==1.48.1
+pymarc==5.3.1
+PyMuPDF==1.26.3
+lxml==6.0.0
+sentence-transformers==5.1.0
+transformers==4.55.2
+faiss-cpu==1.12.0
+langdetect==1.0.9
 Pillow==10.3.0
+torch==2.5.1
+torchvision==0.20.1
+easyocr==1.7.1
