--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,4 @@ transformers==4.55.2
 faiss-cpu==1.12.0
 langdetect==1.0.9
 Pillow==10.3.0
-torch==2.5.1
-torchvision==0.20.1
-easyocr==1.7.1
+requests==2.32.3
