--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 streamlit==1.48.1
 pymarc==5.3.1
 PyMuPDF==1.26.3
-lxml==6.0.0
-sentence-transformers==5.1.0
-transformers==4.55.2
-faiss-cpu==1.12.0
+lxml==4.9.3
+sentence-transformers==3.0.1
+transformers==4.45.1
+faiss-cpu==1.8.0
 langdetect==1.0.9
-Pillow==10.2.0
-requests==2.32.3
+Pillow
