--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.48.1
-pymarc==5.3.1
-PyMuPDF==1.26.3
-lxml==4.9.3
-sentence-transformers==3.0.1
-transformers==4.45.1
-faiss-cpu==1.8.0
-langdetect==1.0.9
-Pillow
+streamlit>=1.32.0
+pymarc>=5.3.1
+PyMuPDF>=1.24.10
+lxml>=5.2.2
+sentence-transformers>=3.0.1
+transformers>=4.43.4
+torch>=2.5.0
+faiss-cpu>=1.8.0
+langdetect>=1.0.9
